\name{ ExpressionAtlasNews }
\title{ ExpressionAtlas News }
\encoding{ UTF-8 }

\section{ Version 0.99}{
    \itemize{
        \item Initial release.
    }
}