@@ -1,16 +1,14 @@
 Package: ExpressionAtlas
-Version: 0.99.0
-Date: 2015/12/04
+Version: 0.99.1
+Date: 2016/02/26
 Title: Download datasets from EMBL-EBI Expression Atlas
 Author: Maria Keays
 Maintainer: Maria Keays <mkeays@ebi.ac.uk>
-Description: This package is for downloading data from specified
-        datasets from EMBL-EBI Expression Atlas and loading it into R
-        for further analysis. Each Expression Atlas dataset is
-        represented as a SimpleList object with one element per
-        platform. Sequencing data is contained in a
-        SummarizedExperiment object, while microarray data is contained
-        in an ExpressionSet or MAList object.
+Description: This package is for searching for datasets in EMBL-EBI Expression
+    Atlas, and downloading them into R for further analysis. Each Expression Atlas
+    dataset is represented as a SimpleList object with one element per platform.
+    Sequencing data is contained in a SummarizedExperiment object, while microarray
+    data is contained in an ExpressionSet or MAList object.
 biocViews: ExpressionData, ExperimentData, SequencingData,
         MicroarrayData, ArrayExpress
 Depends: methods, Biobase, SummarizedExperiment, limma, S4Vectors
