@@ -19,13 +19,13 @@ experimental conditions, to discover which genes are expressed in which
 tissues, cell types, developmental stages, and hundreds of other experimental
 conditions.
 
-The *ExpressionAtlas* R package enables download of pre-packaged data from
-Expression Atlas directly into an R session. Raw counts are provided for
-RNA-seq datasets, while normalized intensities are available for microarray
-experiments. Protocols describing how the data was generated are contained within
-the downloaded R objects, with more detailed information available on the
-[Expression Atlas website](http://www.ebi.ac.uk/gxa). Sample annotations are
-also included in the R object.
+The *ExpressionAtlas* R package allows you to search for and download
+pre-packaged data from Expression Atlas inside an R session. Raw counts
+are provided for RNA-seq datasets, while normalized intensities are available
+for microarray experiments. Protocols describing how the data was generated are
+contained within the downloaded R objects, with more detailed information
+available on the [Expression Atlas website](http://www.ebi.ac.uk/gxa).
+Sample annotations are also included in the R object.
 
 # Searching and downloading Expression Atlas data
 
