@@ -2,6 +2,12 @@
 \title{ ExpressionAtlas News }
 \encoding{ UTF-8 }
 
+\section{ Version 0.99.1 }
+    \itemize{
+        \item Updated DESCRIPTION; use message() instead of cat() for logging
+    }
+}
+
 \section{ Version 0.99}{
     \itemize{
         \item Initial release.
